<resources>
    <string name="app_name">FlippedClassroom</string>
    <string name="user_id">账号</string>
    <string name="password">密码</string>
    <string name="password_again">再次输入</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_user">新用户？去注册</string>
    <string name="i_am_student">我是学生</string>
    <string name="i_am_teacher">我是老师</string>
    <string name="registered">注册</string>
    <string name="default_user_name">用户</string>
    <string name="default_gender">不明</string>
    <string name="default_user_description">我什么都没有写</string>
    <string name="my_profile">我的主页</string>
    <string name="setting">设置</string>
    <string name="manager">管理</string>
    <string name="add_new_course">添加新的课程</string>
    <string name="login_out">切换账号</string>
    <string name="account_safe">账号安全</string>
    <string name="commit_post">确定提交</string>
    <string name="loading">加载中</string>
    <string name="student">student</string>
    <string name="teacher">teacher</string>
</resources>
